manifests-fixed/frontend-deployment.yaml
# frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: betechnet-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: betechnet-frontend
  template:
    metadata:
      labels:
        app: betechnet-frontend
    spec:
      automountServiceAccountToken: false
      containers:
        - name: betechnet-frontend
          image: 374965156099.dkr.ecr.us-west-2.amazonaws.com/betech-frontend:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
              ephemeral-storage: "512Mi"
            limits:
              memory: "256Mi"
              cpu: "250m"
              ephemeral-storage: "1Gi"
---
# apiVersion: v1
# kind: Service
# metadata:
#   name: betechnet-frontend
# spec:
#   selector:
#     app: betechnet-frontend
#   ports:
#     - port: 3000
#       targetPort: 3000
#       nodePort: 32180
#   type: NodePort

apiVersion: v1
kind: Service
metadata:
  name: betechnet-frontend
spec:
  selector:
    app: betechnet-frontend
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
